fix for x overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ rgb(255, 255, 255)
 body, html {
 	background: #349dee;
 	color: #515151;
+	overflow-x: hidden;
 }
 
 img, button, .navbar {
